--- a/NookBooks/src/main/resources/application.properties
+++ b/NookBooks/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=NookBooks
+
+# Profile default
+spring.profiles.active=dev
+
+# DataSource
+spring.datasource.url=jdbc:mariadb://localhost:3310/ecommerce_db?useUnicode=true&characterEncoding=utf8mb4&serverTimezone=UTC
+spring.datasource.username=ecom_user
+spring.datasource.password=ecom_pass
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
