--- a/NookBooks/src/main/resources/application.properties
+++ b/NookBooks/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=NookBooks
 spring.profiles.active=dev
 
 # DataSource
-spring.datasource.url=jdbc:mariadb://localhost:3310/ecommerce_db?useUnicode=true&characterEncoding=utf8mb4&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://localhost:3310/nookbooks
 spring.datasource.username=ecom_user
 spring.datasource.password=ecom_pass
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
